src/snapshots/tptp__tests__general_term-5.snap
---
source: src/tests.rs
expression: parsed

---
Colon(
    Variable(
        Variable(
            UpperWord(
                "X",
            ),
        ),
    ),
    Data(
        Variable(
            Variable(
                UpperWord(
                    "Y",
                ),
            ),
        ),
    ),
)
