src/snapshots/tptp__tests__general_term.snap
---
source: src/tests.rs
expression: parsed
---
List(
    GeneralList(
        Some(
            GeneralTerms(
                [
                    Data(
                        Variable(
                            Variable(
                                UpperWord(
                                    "X",
                                ),
                            ),
                        ),
                    ),
                    Data(
                        Variable(
                            Variable(
                                UpperWord(
                                    "Y",
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
