src/snapshots/tptp__tests__general_terms-3.snap
---
source: src/tests.rs
expression: parsed

---
GeneralTerms(
    [
        Data(
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ),
        Data(
            Variable(
                Variable(
                    UpperWord(
                        "Y",
                    ),
                ),
            ),
        ),
    ],
)
