src/snapshots/tptp__tests__include-3.snap
---
source: src/tests.rs
expression: parsed

---
Include {
    file_name: FileName(
        SingleQuoted(
            "test",
        ),
    ),
    selection: FormulaSelection(
        Some(
            NameList(
                [
                    AtomicWord(
                        Lower(
                            LowerWord(
                                "test",
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
}
