src/snapshots/tptp__tests__include.snap
---
source: src/tests.rs
expression: parsed

---
Include {
    file_name: FileName(
        SingleQuoted(
            "test",
        ),
    ),
    selection: FormulaSelection(
        None,
    ),
}
