src/snapshots/tptp__tests__literal-3.snap
---
source: src/tests.rs
expression: parsed
---
NegatedAtomic(
    Plain(
        PlainAtomicFormula(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "p",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
