src/snapshots/tptp__tests__literal.snap
---
source: src/tests.rs
expression: parsed

---
Atomic(
    Plain(
        PlainAtomicFormula(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "p",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
