src/snapshots/tptp__tests__name-3.snap
---
source: src/tests.rs
expression: parsed

---
AtomicWord(
    SingleQuoted(
        SingleQuoted(
            "single quoted",
        ),
    ),
)
